--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/MobileMainMenu"
+    android:background="@drawable/mobile_mainmenu"
     tools:context="com.sidm.mgp_lab02_153492y.Mainmenu">
 
     <Button
@@ -23,6 +23,20 @@
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/btn_start"
         android:layout_marginBottom="35dp" />
+
+    <Button
+        android:id="@+id/btn_option"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="101dp"
+        android:background="@drawable/button"
+        android:text="Option"
+        android:textSize="18dp"
+        android:textColor="#bdfcf2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/btn_start"
+        android:layout_marginBottom="120dp" />
+
 
     <Button
         android:id="@+id/btn_start"
