--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -11,18 +11,6 @@
     android:background="@drawable/mobile_mainmenu"
     tools:context="com.sidm.mgp_lab02_153492y.Mainmenu">
 
-    <Button
-        android:id="@+id/btn_help"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="101dp"
-        android:background="@drawable/button"
-        android:text="Help"
-        android:textSize="18dp"
-        android:textColor="#bdfcf2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btn_start"
-        android:layout_marginBottom="35dp" />
 
     <Button
         android:id="@+id/btn_option"
@@ -33,10 +21,8 @@
         android:text="Option"
         android:textSize="18dp"
         android:textColor="#bdfcf2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btn_start"
-        android:layout_marginBottom="120dp" />
-
+        android:layout_above="@+id/btn_help"
+        android:layout_alignStart="@+id/btn_help" />
 
     <Button
         android:id="@+id/btn_start"
@@ -46,7 +32,7 @@
         android:text="Start"
         android:textSize="18dp"
         android:textColor="#bdfcf2"
-        android:layout_centerVertical="true"
+        android:layout_above="@+id/btn_option"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -56,9 +42,22 @@
         android:textColor="#bdfcf2"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="15dp"
         android:layout_above="@+id/btn_start"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_help"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="101dp"
+        android:background="@drawable/button"
+        android:text="Help"
+        android:textSize="18dp"
+        android:textColor="#bdfcf2"
+        android:layout_marginBottom="17dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/btn_start" />
 
 
 </RelativeLayout>
