--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -11,30 +11,6 @@
     android:background="@drawable/mobile_mainmenu"
     tools:context="com.sidm.mgp_lab02_153492y.Mainmenu">
 
-
-    <Button
-        android:id="@+id/btn_option"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="101dp"
-        android:background="@drawable/button"
-        android:text="Option"
-        android:textSize="18dp"
-        android:textColor="#bdfcf2"
-        android:layout_above="@+id/btn_help"
-        android:layout_alignStart="@+id/btn_help" />
-
-    <Button
-        android:id="@+id/btn_start"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:background="@drawable/button"
-        android:text="Start"
-        android:textSize="18dp"
-        android:textColor="#bdfcf2"
-        android:layout_above="@+id/btn_option"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:layout_height="wrap_content"
         android:text="Rooftop Runners"
@@ -42,22 +18,66 @@
         android:textColor="#bdfcf2"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="25dp"
         android:layout_above="@+id/btn_start"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_start"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:background="@drawable/start_button"
+        android:textSize="18dp"
+        android:textColor="#bdfcf2"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/btn_highScore"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_highScore"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:background="@drawable/highscore_button"
+        android:textSize="18dp"
+        android:textColor="#bdfcf2"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/btn_option"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_option"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="101dp"
+        android:background="@drawable/options_button"
+        android:textSize="18dp"
+        android:textColor="#bdfcf2"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/btn_help"
+        android:layout_alignStart="@+id/btn_help" />
 
     <Button
         android:id="@+id/btn_help"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginRight="101dp"
-        android:background="@drawable/button"
-        android:text="Help"
+        android:background="@drawable/help_button"
         android:textSize="18dp"
         android:textColor="#bdfcf2"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/btn_start" />
 
+
+    <Button
+        android:id="@+id/btn_quit"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button"
+        android:text="Quit"
+        android:textSize="18dp"
+        android:textColor="#bdfcf2"
+        android:layout_alignBottom="@+id/btn_help"
+        android:layout_toRightOf="@+id/btn_help" />
 
 </RelativeLayout>
