--- a/app/src/main/res/layout/help_page.xml
+++ b/app/src/main/res/layout/help_page.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:layout_height="wrap_content"
-        android:text="HELP ME"
+        android:text="How to play"
         android:textSize="50dp"
         android:textColor="#bdfcf2"
         android:id="@+id/textView"
@@ -22,10 +22,21 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@drawable/back_button"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/btn_back" />
+
+    <Button
+        android:background="@drawable/helpmenu"
+        android:layout_marginTop="70dp"
+        android:layout_width="1280dp"
+        android:layout_height="500dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        />
+
+
 </RelativeLayout>
