--- a/app/src/main/res/layout/highscore_page.xml
+++ b/app/src/main/res/layout/highscore_page.xml
@@ -22,9 +22,9 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@drawable/back_button"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/btn_back" />
