--- a/app/src/main/res/layout/highscore_page.xml
+++ b/app/src/main/res/layout/highscore_page.xml
@@ -16,7 +16,7 @@
         android:text="High Score"
         android:textSize="50dp"
         android:textColor="#bdfcf2"
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_centerHorizontal="true" />
@@ -28,4 +28,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/btn_back" />
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="50dp"
+        android:textColor="#bdfcf2"
+        android:id="@+id/scoreView"
+        android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/textView2" />
 </RelativeLayout>
