--- a/app/src/main/res/layout-land/facebook.xml
+++ b/app/src/main/res/layout-land/facebook.xml
@@ -25,4 +25,13 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="20dp" />
 
+
+    <Button
+        android:background="@drawable/back_button"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:id="@+id/btn_back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
