--- a/app/src/main/res/layout/highscore_page.xml
+++ b/app/src/main/res/layout/highscore_page.xml
@@ -38,4 +38,13 @@
         android:layout_width="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignStart="@+id/textView2" />
+
+    <Button
+        android:background="@drawable/back_button"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:id="@+id/btn_share"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
