--- a/app/src/main/res/layout-land/option_page.xml
+++ b/app/src/main/res/layout-land/option_page.xml
@@ -58,4 +58,15 @@
         android:layout_alignParentStart="true"
         android:id="@+id/btn_off" />
 
+    <Button
+        android:background="@drawable/off_button"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="300dp"
+        android:id="@+id/btn_clear"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="11dp" />
+
 </RelativeLayout>
