--- a/app/src/main/res/layout/highscore_page.xml
+++ b/app/src/main/res/layout/highscore_page.xml
@@ -19,7 +19,8 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_marginBottom="15dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        />
 
     <Button
         android:background="@drawable/back_button"
@@ -29,16 +30,6 @@
         android:layout_alignParentStart="true"
         android:id="@+id/btn_back" />
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="50dp"
-        android:textColor="#bdfcf2"
-        android:id="@+id/scoreView"
-        android:layout_width="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView2" />
-
     <Button
         android:background="@drawable/back_button"
         android:layout_width="80dp"
@@ -46,5 +37,16 @@
         android:id="@+id/btn_share"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="50dp"
+        android:textColor="#bdfcf2"
+        android:id="@+id/scoreView"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="43dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
