--- a/app/src/main/res/layout/highscore_page.xml
+++ b/app/src/main/res/layout/highscore_page.xml
@@ -41,12 +41,13 @@
     <TextView
         android:layout_height="wrap_content"
         android:text=""
+        android:lines="5"
         android:textSize="50dp"
         android:textColor="#bdfcf2"
         android:id="@+id/scoreView"
         android:layout_width="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/btn_share" />
 
 </RelativeLayout>
