--- a/app/src/main/res/layout-land/option_page.xml
+++ b/app/src/main/res/layout-land/option_page.xml
@@ -59,7 +59,7 @@
         android:id="@+id/btn_off" />
 
     <Button
-        android:background="@drawable/off_button"
+        android:background="@drawable/clear_button"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginLeft="300dp"
